# dgit

./: .gitignore  Cargo.toml  model.txt
.dgit/: HEAD
src/: blob.rs  branch.rs  commit.rs  config.rs  index.rs  main.rs  tree.rs  util.rs
