[package]
name = "dgit"
version = "0.1.0"
authors = ["Diego Rocha <dlmrocha87@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
chrono = "0.4.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
